--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
             <img class="robo" src="img/robotron.png" alt="Robotron" id="robotron">
             <figcaption class="titulo">ROBOTRON <br>2000</figcaption>
         </section>
+               <section class="robotron">
+           <section class="botoes">
+               <button class="alterar" alterar onclick="trocaImagem('Azul')">Robotron Azul</button>
+               <button class="alterar" alterar onclick="trocaImagem('Amarelo')">Robotron Amarelo</button>
+               <button class="alterar" alterar onclick="trocaImagem('Branco')">Robotron Branco</button>
+               <button class="alterar" alterar onclick="trocaImagem('Preto')">Robotron Preto</button>
+               <button class="alterar" alterar onclick="trocaImagem('Rosa')">Robotron Rosa</button>
+               <button class="alterar" alterar onclick="trocaImagem('Vermelho')">Robotron Vermelho</button>
+           </section>
+           <img class="robo" src="/img/Robotron 2000 - Azul.png" alt="Robotron">
+           <figcaption class="titulo">ROBOTRON <br>2000</figcaption>
+       </section>
 
         <section class="box estatisticas">
             <div class="estatistica">
